--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <button id="calcular">Calcular</button>
 
-        <div class="result" id="resulttado"></div>
+        <div class="result" id="resultado"></div>
       </div>
     </main>
 
